[package]
name = "measure_tmp_press"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.3.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-futures = { version = "0.1.0" }
cyw43 = { version = "0.3.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.3.0", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-graphics = "0.8.1"
display-interface = "0.5.0"
smart-leds = "0.3.0"
heapless = "0.8"
usbd-hid = "0.8.1"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
rand = { version = "0.8.5", default-features = false }
embedded-sdmmc = "0.7.0"

# For  SSDL1306 OLED
ssd1306 = "0.9.0"

# For BME280
bme280 = "0.5.1"

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "2e7a2b61275d70d7d09cb676490e2cba4d2bde3f" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "2e7a2b61275d70d7d09cb676490e2cba4d2bde3f" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "2e7a2b61275d70d7d09cb676490e2cba4d2bde3f" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "2e7a2b61275d70d7d09cb676490e2cba4d2bde3f" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "2e7a2b61275d70d7d09cb676490e2cba4d2bde3f" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "2e7a2b61275d70d7d09cb676490e2cba4d2bde3f" }
cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "2e7a2b61275d70d7d09cb676490e2cba4d2bde3f" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "2e7a2b61275d70d7d09cb676490e2cba4d2bde3f" }

[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"
